--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -11,3 +11,18 @@ micropost_<%= i %>:
   created_at: <%= 35.days.ago %>
   user: sagar
 <% end %>
+
+apple:
+  content: 'The color of the apple is red'
+  created_at: <%= 10.minutes.ago %>
+  user: ram
+
+grape:
+  content: 'The color of the grape is green'
+  created_at: <%= 10.minutes.ago %>
+  user: ram
+
+hell:
+  content: 'The color of the hell is fire'
+  created_at: <%= 10.minutes.ago %>
+  user: ram
